# prover-poc

risc0/: Cargo.toml  README.md
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/input-provider/: Cargo.toml
risc0/input-provider/src/: lib.rs  logs.rs
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
risc0/prover/: Cargo.toml
risc0/prover/src/: lib.rs
sp1/: Cargo.toml
sp1/elf/: riscv32im-succinct-zkvm-elf
sp1/input-provider/: Cargo.toml
sp1/input-provider/src/: consensus_parameters.json  lib.rs  relayer_recorer.rs  storage_access_recorder.rs
sp1/lib/: Cargo.toml
sp1/lib/src/: lib.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/prover/: Cargo.toml
sp1/prover/src/: lib.rs
sp1/script/: Cargo.toml
