[workspace]
resolver = "2"
members = ["host", "methods", "input-provider", "prover"]

[workspace.dependencies]
alloy-sol-types = "0.7.7"
prover = { path = "prover" }
input-provider = { path = "input-provider" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
