[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
input-provider.workspace = true
tokio = { version = "1.41.0", features = ["full"] }
prover.workspace = true
alloy-sol-types.workspace = true
bincode = "1.3.3"
