[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false }
alloy-sol-types = { workspace = true }
bincode = { version = "1.3.3", default-features = false }
fuel-core-executor = { version = "0.40.0", default-features = false, features = ["alloc"] }
fuel-core-storage = { version = "0.40.0", default-features = false, features = ["alloc"] }
fuel-core-types = { version = "0.40.0", default-features = false, features = ["serde", "test-helpers"] }
serde = { version = "1", default-features = false, features = ["derive"] }
